syntax = "proto3";
package ranking.core;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCSCORE";
option csharp_namespace = "SnapProto.Ranking.Core";

message SCSCOREUUID {
    fixed64 highBits = 1;
    fixed64 lowBits = 2;
}